dir.c: get rid of FindFirstFile bug

* dir.c (do_stat): use rb_w32_ustati64() in win32.c to get rid of
  mysterious behavior of FindFirstFile() Windows API which treat "<"
  and ">" like as wildcard characters.  [ruby-core:55764] [Bug #8597]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@41755 b2dd03c8-39d4-4d8f-98ff-823fe69b080e